--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
-body{
-  background:#888;
-  font family:Arial;
+body {
+  background: #888;
+  font-family: arial;
 }
 
-h1{
-  colour:#333;
+h1 {
+  color: #333;
 }
