--- a/styles/main.css
+++ b/styles/main.css
@@ -10,17 +10,23 @@ body {
 }
 
 header h1 {
-  color: #333;
   margin: 0;
+  display: inline;
 }
 
 nav ul {
   margin: 0;
+  display: inline;
 }
 
 nav ul li {
   display: inline-block;
   list-style-type: none;
   background: black;
+  colour: white;
+  padding: 5px 15px;
+}
+
+nav ul li a {
   colour: white;
 }
