--- a/styles/main.css
+++ b/styles/main.css
@@ -1,19 +1,17 @@
 header {
   background: black;
   color: white;
-  padding: 15px 15px 0 15px;
+  padding: 20px;
   display: inline;
-  margin: 0;
 }
 
 body {
-  margin: 0;
+  padding: 20px;
   font-family: arial;
   background: #999;
 }
 
 nav ul {
-  margin: 0;
   padding: 0;
   display: inline;
   list-style-type: none;
