--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,14 @@
 body {
-  color: black;
   padding: 0;
   margin: 0;
   font-family: Helvetica;
+}
+h1 {
+  color: white;
+}
+
+h2 {
+  color: black;
 }
 
 header {
