--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@ section {
 
 header {
   background: black;
-  background-image: url("image/chemicals.jpg");
+  background-image: url("chemicals.jpg");
   background-size: 100%;
   background-position: center;
   height: 400px;
