--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,9 @@ section {
 
 header {
   background: black;
+  background-image: url("chemicalheader.jpg");
+  background-size: 100%;
+  background-position: center;
   height: 300px;
   padding: 20px;
   text-align: center;
