--- a/styles/main.css
+++ b/styles/main.css
@@ -39,3 +39,10 @@ li {
 ul li a {
   colour: white;
 }
+
+.features {
+  background: white;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+}
