--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 body {
-  color: black;
+  color: white;
   padding: 0;
   margin: 0;
   font-family: Helvetica;
@@ -47,4 +47,9 @@ ul li a {
   padding: 20px;
   display: flex;
   flex-direction: row;
+}
+
+section {
+  color: black;
+  padding: 20px;
 }
