--- a/css/style.css
+++ b/css/style.css
@@ -101,28 +101,6 @@ header a:hover{
     font-size: 25px;
 }
 
-/* Newsletter
-#newsletter{
-    padding: 15px;
-    color: #ffffff;
-    background: #35424a;
-}
-
-#newsletter h1{
-    float: left;
-}
-
-#newsletter form{
-    float: right;
-    margin-top: 18px;
-}
-
-#newsletter input[type="email"]{
-    padding: 4px;
-    height: 25px;
-    width: 250px;
-} */
-
 /* Boxes */
 
 #boxes{
@@ -208,4 +186,11 @@ footer{
 #newsletter form input[type="email"], .quote input, .quote textarea{
     width: 100%;
     margin-bottom: 5px; 
+}
+
+.img-me{
+    width: 360px;
+    padding: 20px;
+    margin-top: 12px;
+    margin-left: 25px;
 }
