--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
     line-height: 1.5;
     padding: 0;
     margin: 0;
-    background-color: #f4f4f4;
+    background-color: linear-gradient(45deg, #CCFFFF, #FFCCCC);
 }
 /* Global */
 .container{
