--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: Arial, Arial, Helvetica, sans-serif;
+    font-family: Lucida Sans Unicode, Lucida Grande, sans-serif;
     font-size: 15px;
     line-height: 1.5;
     padding: 0;
