--- a/css/style.css
+++ b/css/style.css
@@ -1,175 +1,117 @@
-body{
-    font-family: Lucida Sans Unicode, Lucida Grande, sans-serif;
-    font-size: 15px;
-    line-height: 1.5;
-    padding: 0;
-    margin: 0;
-    background-color: #B0C4DE;
- /* background: linear-gradient(45deg, #CCFFFF, #FFCCCC); */
- /* background: url("https://cdn.inspirationhut.net/wp-content/uploads/2013/05/11.png"); */
+#main-header {
+    background-color: transparent;
+    text-align: center;
+    padding: 10px;
+    color: black;
+    font-size: 24px;
+    font-weight: lighter;
+    font-variant: small-caps;
+    line-height: 50px;
 }
 
-/* Global */
-.container{
+#main-header a {
+    color: black;
+    text-decoration: none;
+}
+
+#main-header a:hover {
+    color: rgb(69, 69, 126);
+}
+
+/* Nav */
+#menu {
+    background-color: transparent;
+}
+
+#menu ul{
+    background-color: transparent;
+    text-align: center;
+    padding: 0;
+    list-style: none;
+}
+
+#menu li {
+    display: inline;
+}
+
+#menu a {
+    font-size: 18px;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: darkslategray;
+    text-decoration: none;
+}
+
+#menu a:hover {
+    color: burlywood;
+}
+
+body {
+    background: linear-gradient(45deg, #CCFFFF, #FFCCCC);
+    background-repeat: none;
+    line-height: 1.6em;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    color: #555;
+    font-weight: normal;
+    margin: 0;
+}
+
+footer {
+    text-align: center;
+    font-size: 18px;
+}
+
+/* Div */
+.container {
     width: 80%;
     margin: auto;
-    overflow: hidden;
 }
 
-ul{
-    margin: 0;
-    padding: 0;
+#showcase {
+    background-image: url('../images/blue.png');
+    background-position: left;
+    background-repeat: no-repeat;
+    height: 500px;
+    line-height: 50px;
+    padding: 25px;
 }
 
-.button_1{
-    height: 38px;
-    background: #000080;
-    border: none;
-    padding-left: 20px;
-    padding-right: 20px;
-    color: #ffffff;
+#showcase container {
+    margin: none;
 }
 
-.dark{
-    padding: 15px;
-    background: #35424a;
-    color: #ffffff;
-    margin-top: 10px;
-    margin-bottom: 10px;
+#showcase h1{
+    font-size: 35px;
+    margin-top: 150px;
+    margin-right:450px;
 }
 
-/* Header */
-header{
-    background: #c0c0c0;
-    color: #ffffff;
-    padding-top: 30px;
-    min-height: 70px;
-    border-bottom: #000080 3px solid;
+.box {
+float: right;
+width: 180px;
+height: 240px;
 }
-
-header a{
-    color: #ffffff;
+/* About Me */
+#description {
+    margin-bottom: 300px;
+}
+#description p {
     text-decoration: none;
-    text-transform: uppercase;
-    font-size: 16px;
+    color: darkslategray;
 }
 
-header li{
-    float: left;
-    display: inline;
-    /* Top Right Bottom Left */
-    padding: 0 20px 0 20px;
+#description a {
+    text-decoration: none;
+    color: darkslategray;
 }
 
-header#branding{
-    float: left;
+#description a:hover {
+    color: burlywood;
 }
 
-header#branding h1{
-    margin: 0;
+/* Projects */
+#item {
+    margin-bottom: 400px;
 }
-
-header nav{
-    float: right;
-    margin-top: 10px;
-}
-
-header .highlight, header .current a{
-    color: #000080;
-    font-weight: bold;
-}
-
-header a:hover{
-    color: #CCCCCC;
-    font-weight: bold;
-}
-
-/* Showcase */
-#showcase{
-    min-height: 330px;
-    background: url("../images/chemicalheader.jpg") no-repeat;
-    background-size: 100%;
-    background-position: center;
-}
-
-#showcase h1{
-    padding-top: 100px;
-    margin-top: 100px;
-    font-size: 25px;
-    margin-bottom: 10px;
-    color: #ffffff;
-}
-
-#showcase p{
-    font-size: 25px;
-}
-
-/* Boxes */
-
-#boxes{
-    margin-top: 20px;
-}
-
-#boxes .box{
-    float: left;
-    text-align: center;
-    width: 30%;
-    padding: 10px;
-}
-
-#boxes .box img{
-    width: 90px;
-}
-
-/* Sidebar */
-aside#sidebar{
-    float: right;
-    width: 30%;
-    margin-top: 10px;
-}
-
-aside#sidebar .quote input, aside#sidebar .quote textarea{
-    width: 90%;
-    padding: 5px;
-}
-
-/* Main-col */
-article#main-col{
-    float: left;
-    width: 65%;
-}
-
-footer{
-    position: absolute;
-    height: 20px;
-    margin-top: 20px;
-    color: #ffffff;
-    background-color: #000080;
-    text-align: center;
-}
-
-/* Media Queries */
-    header{
-        padding-bottom: 20px;
-    }
-}
-
-#showcase h1{
-    margin-top: 40px;
-}
-
-button:hover {
-    animation-name: background-color;
-    animation-fill-mode: forwards;
-    
-@keyframes background-color {
-    100% {
-      background-color: #4791d0;
-    }
-
-.img-me{
-    width: 360px;
-    padding: 20px;
-    margin-top: 12px;
-    margin-left: 25px;
 }
