--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Header */
 #main-header {
     background-color: transparent;
     text-align: center;
@@ -92,10 +93,12 @@ float: right;
 width: 180px;
 height: 240px;
 }
+
 /* About Me */
 #description {
     margin-bottom: 300px;
 }
+
 #description p {
     text-decoration: none;
     color: darkslategray;
