--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ footer {
     background-image: url('../images/blue.png');
     background-position: left;
     background-repeat: no-repeat;
+    width:100%;
     height: 500px;
     line-height: 50px;
     padding: 25px;
