--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,11 @@
     background-color: transparent;
     text-align: center;
     color: black;
+    width: 100%;
     font-size: 24px;
     font-weight: lighter;
     font-variant: small-caps;
     line-height: 50px;
-    overflow: hidden;
 }
 
 #main-header a {
