--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,6 @@
     color: rgb(69, 69, 126);
 }
 
-/* Media Queries
-@media screen and (max-width: 800px) {
-    .left, .main, .right {
-      width: 100%; The width is 100%, when the viewport is 800px or smaller
-    }
-  }*/
-
 /* Nav */
 #menu {
     background-color: transparent;
@@ -77,30 +70,36 @@ footer {
 
 #showcase {
     background-image: url('../images/blue.png');
-    background-position: left;
+    background-position: relative;
     background-repeat: no-repeat;
     width:100%;
-    height: 500px;
-    line-height: 50px;
-    padding: 25px;
+    height: 550px;
 }
 
 #showcase container {
     margin: none;
+    font-size: 100;
 }
 
-#showcase h1{
-    font-size: 35px;
-    margin-top: 150px;
-    margin-right:450px;
+#showcase h1 {
+    margin-top: 80px;
+    padding-top: 80px;
+    font-size: 30px;
+    line-height: 50px;
 }
 
-.box {
-float: right;
-width: 180px;
-height: 240px;
-}
-
+/*Picture of Me */
+#box {
+    background-image: url('../images/me.jpg'); 
+    background-repeat: no-repeat;
+    opacity: 0.9;
+    height: 450px;
+    width: 341px;
+    position: absolute;
+    top: 270px;
+    right: 100px;
+    }
+    
 /* About Me */
 #description {
     margin-bottom: 300px;
@@ -126,8 +125,33 @@ height: 240px;
 }
 
 /* Media Queries */
-@media only screen and (max-device-width: 800px) {
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+#showcase {
+    width: 100%;
+}   
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+#showcase {
+    width: 100%;
+}   
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+#showcase {
+    width: 100%;
+}   
+}
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+#showcase {
+    width: 100%;
+}   
+}
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
     #showcase {
-        width: 100%;
-    }
+    width: 100%;
+}   
 }
