--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ footer {
     line-height: 50px;
 }
 
-/* Profile Picture */
+/*Picture of Me */
 #box {
     background-image: url('../images/me.jpg'); 
     background-repeat: no-repeat;
