--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@
 
 body {
     background: linear-gradient(60deg, #CCFFFF, #FFCCCC);
+   /* background-image: url(../images/blue-snow.png);*/
     background-repeat: none;
     line-height: 1.6em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -55,11 +56,7 @@ body {
     color: #555;
     font-weight: normal;
     margin: 0;
-}
-
-footer {
-    text-align: center;
-    font-size: 18px;
+    height: 15px;
 }
 
 /* Div */
@@ -68,44 +65,38 @@ footer {
     margin: auto;
 }
 
+/*Left Side of Home Page */
 #showcase {
-    background-image: url('../images/blue.png');
-    background-position: relative;
+    background-image: url('../images/color.png');
+    background-position: center;
     background-repeat: no-repeat;
-    width:100%;
-    height: 550px;
+    width: 500px;
+    height: 484px;
 }
 
-#showcase container {
+#showcase .container {
     margin: none;
-    font-size: 100;
 }
 
-#showcase h1 {
-    margin-top: 80px;
-    padding-top: 80px;
+#showcase h1 { /*fix*/
+    padding-top: 170px;
+    padding-left: 90px;
     font-size: 30px;
     line-height: 50px;
 }
 
-/*Picture of Me */
-#box {
-    background-image: url('../images/me.jpg'); 
-    background-repeat: no-repeat;
-    opacity: 0.9;
-    height: 450px;
-    width: 341px;
-    position: absolute;
-    top: 270px;
-    right: 100px;
-    border: 5px solid #f1b1b167; 
-    border-radius: 5px;
-    }
-    
-/* About Me */
-#description {
-    margin-bottom: 300px;
+/* Footer */
+footer {
+    text-align: center;
+    font-size: 15px;
+    padding: 20px;
+    height: 15px;
 }
+
+/* About Me */
+/*#description {
+    margin-bottom: 300px;           (Brings footer down and doesn't show repeat of background image)
+}*/
 
 #description p {
     text-decoration: none;
@@ -122,38 +113,40 @@ footer {
 }
 
 /* Projects */
-#item {
-    margin-bottom: 400px;
+/*#item {
+    margin-bottom: 400px;           (Brings footer down and doesn't show repeat of background image)
+}*/
+
+#item a {
+    font-size: 18px;
+    color: darkslategray;
+    text-decoration: none;
 }
 
-/* Media Queries */
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-#showcase {
-    width: 100%;
-}   
+#item a:hover {
+    color: rgba(160, 137, 202, 0.911);
 }
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-#showcase {
-    width: 100%;
-}   
-}
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-#showcase {
-    width: 100%;
-}   
-}
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-#showcase {
-    width: 100%;
-}   
-}
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-    #showcase {
-    width: 100%;
-}   
+
+/*Media Queries*/
+@media  (max-width: 768px) {
+    #main-header {
+        float: none;
+        text-align: center;
+        width: 100%;
+    }
+
+    body {
+        height: 15px;
+    }
+
+    #showcase h1 {
+        margin-top: 80px;
+        font-size: 30px;
+        line-height: 50px;
+    }
+
+    footer {
+        text-align: center;
+        font-size: 15px;
+    }
 }
