--- a/css/style2.css
+++ b/css/style2.css
@@ -67,26 +67,6 @@ body {
     margin: auto;
 }
 
-/*Left Side of Home Page */
-#showcase {
-    background-image: url('/images/color.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 500px;
-    height: 484px;
-}
-
-#showcase .container {
-    margin: none;
-}
-
-#showcase h1 { /*fix*/
-    padding-top: 170px;
-    padding-left: 90px;
-    font-size: 30px;
-    line-height: 50px;
-}
-
 /* Footer */
 footer {
     text-align: center;
@@ -96,7 +76,7 @@ footer {
 
 /* About Me */
 /*#description {
-    margin-bottom: 300px;           (Brings footer down and doesn't show repeat of background image)
+    margin-bottom: 300px;           /*(Brings footer down and doesn't show repeat of background image)*/
 }*/
 
 #description p {
