--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,15 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 body {
     font-family: 'Century Gothic', sans-serif;
     color: darkslategray;
-    margin: 0;
-    padding: 0;
     background: linear-gradient(60deg, #CCFFFF, #FFCCCC);
     background-repeat: no-repeat;
     background-size: cover;
@@ -116,4 +123,28 @@ footer {
     font-size: 15px;
     margin-top: 30px;
     margin-bottom: 35px;
+}
+
+/*Media Queries*/
+@media  (max-width: 768px) {
+    menu {
+        text-align: center;
+        width: 100%;
+    }
+
+    .box {
+        width: 300px;
+    }
+
+    .box h1 {
+        font-size: 35px;
+        letter-spacing: 4px;
+        font-weight: 100;
+        text-align: center;
+    }
+
+    footer {
+        text-align: center;
+        font-size: 15px;
+    }
 }
