--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,16 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Century Gothic', sans-serif;
+}
+
+.wrapper {
+    overflow-x: hidden; 
+}
+
 /* Header */
 #main-header {
     background-color: transparent;
@@ -50,15 +63,12 @@
 
 body {
     background: linear-gradient(60deg, #CCFFFF, #FFCCCC);
-   /* background-image: url(../images/blue-snow.png);*/
     background-repeat: none;
     line-height: 1.6em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     color: #555;
     font-weight: normal;
-    margin: 0;
-    height: 15px;
 }
 
 /* Div */
@@ -67,31 +77,11 @@ body {
     margin: auto;
 }
 
-/*Left Side of Home Page */
-#showcase {
-    background-image: url('/images/color.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 500px;
-    height: 484px;
-}
-
-#showcase .container {
-    margin: none;
-}
-
-#showcase h1 { /*fix*/
-    padding-top: 170px;
-    padding-left: 90px;
-    font-size: 30px;
-    line-height: 50px;
-}
-
 /* Footer */
 footer {
     text-align: center;
     font-size: 15px;
-    padding: 20px;
+    font-family: 'Century Gothic', sans-serif;
 }
 
 /* About Me */
@@ -114,9 +104,9 @@ footer {
 }
 
 /* Projects */
-*#item {
-    margin-bottom: 400px;           /*(Brings footer down and doesn't show repeat of background image)*/
-}
+/*#item {
+    margin-bottom: 500px;            (Brings footer down and doesn't show repeat of background image)
+}*/
 
 #item a {
     font-size: 18px;
@@ -147,21 +137,36 @@ article col-2{
     #main-header {
         float: none;
         text-align: center;
-        width: 100%;
+        padding-top: 15px;
+    }
+    
+    .logos {
+        padding-top: 5px;
     }
 
-    body {
-        height: 15px;
+    #menu {
+        margin-top: -10px;
     }
 
-    #showcase h1 {
-        margin-top: 80px;
-        font-size: 30px;
-        line-height: 50px;
+    #menu a {
+        font-size: 17px;
+    }
+
+    .container h1 {
+        font-size: 24px;
+        line-height: 25px;
+    }
+
+    body h2 {
+        font-size: 20px;
+    }
+
+    body p {
+        font-size: 16px;
     }
 
     footer {
         text-align: center;
-        font-size: 15px;
+        font-size: 15px;    
     }
 }
