--- a/css/style2.css
+++ b/css/style2.css
@@ -1,10 +1,11 @@
 html,body
 {
     width: 100%;
-    height: 100%;
     margin: 0px;
     padding: 0px;
     font-family: 'Century Gothic', sans-serif;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .wrapper {
@@ -29,7 +30,7 @@ html,body
 }
 
 #main-header a:hover {
-    color: #b9b9b9;
+    color: #5e3232;
 }
 
 /* Nav */
@@ -58,11 +59,11 @@ html,body
 }
 
 #menu a:hover {
-    color: burlywood;
+    color: rgb(136, 94, 38);
 }
 
 body {
-    background: linear-gradient(60deg, #CCFFFF, #FFCCCC);
+    background-color: /*linear-gradient(60deg, #CCFFFF, #FFCCCC);*/ thistle;
     background-repeat: none;
     line-height: 1.6em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -71,10 +72,21 @@ body {
     font-weight: normal;
 }
 
-/* Div */
-.container {
-    width: 80%;
+main {
+    margin: 0 auto;
+    padding: 30px 20px;
+    width: 90vw;
+}
+
+/*Section: Content */
+section {
     margin: auto;
+}
+
+/* Article */
+article {
+    padding: 20px;
+    margin-bottom: 20px;
 }
 
 /* Footer */
@@ -82,13 +94,15 @@ footer {
     text-align: center;
     font-size: 15px;
     font-family: 'Century Gothic', sans-serif;
+    padding: 20px;
+    background-color: thistle;
+    bottom:0;
+    margin:0;
+    width: 100%;
+    position: absolute;
 }
 
 /* About Me */
-/*#description {
-    margin-bottom: 300px;           (Brings footer down and doesn't show repeat of background image)
-}*/
-
 #description p {
     text-decoration: none;
     color: darkslategray;
@@ -100,14 +114,10 @@ footer {
 }
 
 #description a:hover {
-    color: burlywood;
+    color: rgba(104, 161, 28, 0.911);
 }
 
 /* Projects */
-/*#item {
-    margin-bottom: 500px;            (Brings footer down and doesn't show repeat of background image)
-}*/
-
 #item a {
     font-size: 18px;
     color: darkslategray;
@@ -116,21 +126,16 @@ footer {
 }
 
 #item a:hover {
-    color: rgba(160, 137, 202, 0.911);
-}
-
-/* Article */
-article col-2{
-    float: left;
+    color: rgba(104, 161, 28, 0.911);
 }
 
 /* Sidebar */
-#sidebar {
+/*#sidebar {
     background-image: url(../images/pillbottle.jpg);
     float: right;
     width: 30%;
     margin: 10px;
-}
+}*/
 
 /*Media Queries*/
 @media  (max-width: 768px) {
@@ -140,6 +145,11 @@ article col-2{
         padding-top: 15px;
     }
     
+    #main-header h1 {
+        font-size: 24px;
+        line-height: 25px;
+    }
+
     .logos {
         padding-top: 5px;
     }
@@ -152,21 +162,22 @@ article col-2{
         font-size: 17px;
     }
 
-    .container h1 {
-        font-size: 24px;
-        line-height: 25px;
+    body {
+        position: relative;
+    }
+
+    body::after {
+        content: "";
+        display: block;
+        height: 50px;
     }
 
     body h2 {
         font-size: 20px;
+        margin-top: -25px;
     }
 
     body p {
         font-size: 16px;
-    }
-
-    footer {
-        text-align: center;
-        font-size: 15px;  
     }
 }
