--- a/css/style2.css
+++ b/css/style2.css
@@ -94,11 +94,11 @@ footer {
     text-align: center;
     font-size: 15px;
     font-family: 'Century Gothic', sans-serif;
-    padding: 20px;
+    padding: 20px 0;
     background-color: thistle;
-    bottom:0;
-    margin:0;
-    width: 98%;
+    bottom: 0;
+    margin: 0;
+    width: 100%;
     position: absolute;
 }
 
