--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,66 @@ footer {
         font-size: 15px;
     }
 }
+
+@media  (max-width: 600px) {
+    html,body {
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+        font-family: 'Century Gothic', sans-serif;
+        box-sizing: border-box;
+    }
+    #main-header {
+        float: none;
+        text-align: center;
+        padding-top: 15px;
+    }
+    
+    #main-header h1 {
+        font-size: 24px;
+        line-height: 25px;
+    }
+
+    #menu {
+        margin-top: 25px;
+    }
+
+    #menu li a {
+        font-size: 15px;
+    }
+
+    body {
+        position: relative;
+    }
+
+    .box {
+        text-align: center;
+        padding: 40px 0;
+    }
+    
+    .box img {
+        margin-top: -50px;
+    }
+
+    .box h1 {
+        font-size: 34px;
+    }
+    
+    .box h5 {
+        font-size: 15.5px;
+    }
+
+    .box h6 {
+        font-size: 18.5px;
+    }
+
+    .box ul {
+        letter-spacing: 4px;
+    }
+
+    body::after {
+        content: "";
+        display: block;
+        height: 40px;
+    }
+}
