--- a/css/style2.css
+++ b/css/style2.css
@@ -1,5 +1,4 @@
-html,body
-{
+html,body {
     width: 100%;
     margin: 0px;
     padding: 0px;
@@ -65,7 +64,7 @@ html,body
 body {
     background-color: /*linear-gradient(60deg, #CCFFFF, #FFCCCC);*/ thistle;
     background-repeat: none;
-    line-height: 1.6em;
+    line-height: 24px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     color: #555;
@@ -92,7 +91,7 @@ article {
 /* Footer */
 footer {
     text-align: center;
-    font-size: 15px;
+    font-size: 14px;
     font-family: 'Century Gothic', sans-serif;
     padding: 20px 0;
     background-color: thistle;
@@ -100,7 +99,7 @@ footer {
     margin: 0;
     width: 100%;
     position: absolute;
-}
+  }
 
 /* About Me */
 #description p {
@@ -139,6 +138,14 @@ footer {
 
 /*Media Queries*/
 @media  (max-width: 768px) {
+    html,body {
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+        font-family: 'Century Gothic', sans-serif;
+        box-sizing: border-box;
+        overflow-x: hidden;
+    }
     #main-header {
         float: none;
         text-align: center;
@@ -179,5 +186,59 @@ footer {
 
     body p {
         font-size: 16px;
+    }
+}
+
+@media  (max-width: 600px) {
+    html,body {
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+        font-family: 'Century Gothic', sans-serif;
+        box-sizing: border-box;
+        overflow-x: hidden;
+    }
+    #main-header {
+        float: none;
+        text-align: center;
+        padding-top: 15px;
+    }
+    
+    #main-header h1 {
+        font-size: 24px;
+        line-height: 25px;
+    }
+
+    #menu {
+        margin-top: -10px;
+    }
+
+    #menu a {
+        font-size: 15px;
+    }
+
+    body {
+        position: relative;
+    }
+
+    body::after {
+        content: "";
+        display: block;
+        height: 50px;
+    }
+
+    body h2 {
+        font-size: 18px;
+        margin-top: -25px;
+    }
+
+    #item a {
+        font-size: 16px;
+        color: darkslategray;
+        text-decoration: none;
+    }
+
+    body p {
+        font-size: 14px;
     }
 }
