--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html,body
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
+    overflow-y: hidden;
 }
 
 body {
@@ -127,8 +128,8 @@ h2 {
 /* Footer */
 footer {
     text-align: center;
-    font-size: 15px;
-    bottom:0;
+    font-size: 14px;
+    bottom: 0;
     margin-top:-40px;
     width: 100%;
 }
@@ -141,7 +142,14 @@ footer {
     }
 
     .box {
-        width: 300px;
+        width: 380px;
+        background: transparent;
+        opacity: 0.9;
+        padding: 40px 0;
+        text-align: center;
+        margin-top: 30px;
+        color: darkslategray;
+        font-family: 'Century Gothic', sans-serif;
     }
 
     .box h1 {
@@ -154,6 +162,7 @@ footer {
     footer {
         text-align: center;
         font-size: 15px;
+        margin-top: 0;
     }
 }
 
@@ -216,6 +225,14 @@ footer {
     body::after {
         content: "";
         display: block;
-        height: 40px;
+        height: 0;
+    }
+
+    footer {
+        text-align: center;
+        font-size: 15px;
+        bottom: 0;
+        margin-top: 0;
+        width: 100%;
     }
 }
