--- a/css/style2.css
+++ b/css/style2.css
@@ -126,6 +126,7 @@ footer {
     font-size: 14px;
     font-family: 'Century Gothic', sans-serif;
     background-color: thistle;
+    padding: 20px 0;
     bottom: 0;
     margin:0;
     width: 100%;
