--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,10 @@
-html,body
+html, body
 {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
-    overflow-y: hidden;
 }
 
 body {
@@ -129,10 +128,11 @@ h2 {
 /* Footer */
 footer {
     text-align: center;
-    font-size: 15px;
+    font-size: 14px;
+    margin: 0;
     bottom: 0;
-    margin-top:-40px;
     width: 100%;
+    position: relative;
 }
 
 /*Media Queries*/
@@ -175,6 +175,7 @@ footer {
         font-family: 'Century Gothic', sans-serif;
         box-sizing: border-box;
     }
+
     #main-header {
         float: none;
         text-align: center;
@@ -219,10 +220,6 @@ footer {
         font-size: 18.5px;
     }
 
-    .box ul {
-        letter-spacing: 4px;
-    }
-
     body::after {
         content: "";
         display: block;
@@ -234,6 +231,31 @@ footer {
         font-size: 15px;
         bottom: 0;
         margin-top: 0;
+        width: 100%;
+    }
+}
+
+@media  (max-width: 375px) {
+    html,body {
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+        font-family: 'Century Gothic', sans-serif;
+        box-sizing: border-box;
+    }
+
+    .box {
+        text-align: center;
+        width: 100%;
+    }
+
+    footer {
+        text-align: center;
+        font-size: 14px;
+        font-family: 'Century Gothic', sans-serif;
+        bottom: 0;
+        margin: 0;
+        position: relative;
         width: 100%;
     }
 }
