--- a/css/style2.css
+++ b/css/style2.css
@@ -147,6 +147,17 @@ footer {
     position: absolute; 
 }
 
+.push-1 {
+    text-align: center;
+    font-size: 14px;
+    font-family: 'Century Gothic', sans-serif;
+    background-color: thistle;
+    bottom: 0;
+    margin: 0;
+    width: 100%;
+    position: relative; 
+}
+
 /* About Me */
 #description p {
     text-decoration: none;
