--- a/css/style3.css
+++ b/css/style3.css
@@ -291,7 +291,7 @@ footer {
         bottom: 0;
         margin: 0;
         width: 100%;
-        position: absolute;
+        position: relative;
       }
 }
 
