--- a/css/style3.css
+++ b/css/style3.css
@@ -103,7 +103,7 @@ section {
     margin: 10px 0;
 }
 
-.form input[type="text"], 
+.form input[type="name"], 
 .form input[type="email"],
 .form input[type="subject"],
 .form textarea {
@@ -122,6 +122,15 @@ section {
     border-color: rgb(143, 128, 143);
     box-shadow: inset 0 1px 1px rgba(0,0,0,0.0125),
                 0 0 8px rgba(76, 161, 175, 0.5);
+}
+
+.form-control {
+    position: relative;
+    padding-bottom: 20px;
+}
+
+.form-control small {
+    visibility: hidden;
 }
 
 textarea {
@@ -150,6 +159,15 @@ textarea {
 }
 
 /* Footer */
+footer {
+    text-align: center;
+    font-size: 14px;
+    font-family: 'Century Gothic', sans-serif;
+    bottom: 0;
+    margin: 0;
+    width: 100%;
+  }
+
   .push {
     text-align: center;
     font-size: 14px;
@@ -209,8 +227,12 @@ textarea {
         margin-top: -25px;
     }  
 
+    .container {
+        font-size: 15px;
+    }
+
     .submit {
-        margin-top: none;
+        margin-top: 50px;
     }
 
     footer {
@@ -268,6 +290,10 @@ textarea {
         margin-top: -25px;
     }
 
+    .container {
+        font-size: 15px;
+    }
+
     #item a {
         font-size: 16px;
         color: darkslategray;
@@ -281,7 +307,7 @@ textarea {
         bottom: 0;
         margin: 0;
         width: 100%;
-        position: relative;
+        position: absolute;
       }
 }
 
