--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,22 @@
-html, body {
+@keyframes transitionIn {
+    from {
+        opacity: 0;
+        transform: rotateY(-25deg);
+    }
+
+    to {
+        opacity: 1;
+        transform: rotateY(0);      
+    }
+}
+
+html, body
+{
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden; 
+    overflow-x: hidden;
 }
 
 body {
@@ -19,10 +32,12 @@ main {
     margin: 0 auto;
     padding: 30px 20px;
     width: 90vw;
+    animation: transitionIn 1.30s;
 }
 
 #menu {
     background-color: transparent;
+    animation: transitionIn 1.30s;
 }
 
 #menu ul{
@@ -121,7 +136,7 @@ h2 {
 }
 
 .box li a:hover {
-    color: #b9b9b9;
+    color: #706969b9;
 }
 
 /* Footer */
@@ -132,6 +147,7 @@ footer {
     bottom: 0;
     width: 100%;
     position: relative;
+    animation: transitionIn 1.30s;
 }
 
 /*Media Queries*/
