--- a/css/style3.css
+++ b/css/style3.css
@@ -1,3 +1,15 @@
+@keyframes transitionIn {
+    from {
+        opacity: 0;
+        transform: rotateY(-25deg);
+    }
+
+    to {
+        opacity: 1;
+        transform: rotateY(0);      
+    }
+}
+
 html, body {
     width: 100%;
     height: 100%;
@@ -18,6 +30,7 @@ html, body {
     font-size: 20px;
     letter-spacing: 4px;
     line-height: 50px;
+    animation: transitionIn 1.25s;
 }
 
 #main-header a {
@@ -33,6 +46,7 @@ html, body {
 /* Nav */
 #menu {
     background-color: transparent;
+    animation: transitionIn 1.25s;
 }
 
 #menu ul{
@@ -79,6 +93,7 @@ main {
     margin: 0 auto;
     padding: 30px 20px;
     width: 90vw;
+    animation: transitionIn 1.25s;
 }
 
 /* Section: Content */
@@ -166,6 +181,7 @@ footer {
     bottom: 0;
     margin: 0;
     width: 100%;
+    animation: transitionIn 1.25s;
   }
 
   .push {
