--- a/css/style2.css
+++ b/css/style2.css
@@ -51,7 +51,7 @@ html, body {
     background-color: transparent;
     text-align: center;
     padding: 0;
-    list-style: none;
+    list-style: circle;
 }
 
 #menu li {
