--- a/css/style2.css
+++ b/css/style2.css
@@ -75,7 +75,8 @@ body {
     background-color: /*linear-gradient(60deg, #CCFFFF, #FFCCCC);*/ thistle;
     background-repeat: none;
     line-height: 24px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /*font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;*/
+    font-family: 'Century Gothic', sans-serif;
     font-size: 16px;
     color: #555;
     font-weight: normal;
