--- a/css/style2.css
+++ b/css/style2.css
@@ -14,7 +14,7 @@ html, body {
     width: 100%;
     margin: 0px;
     padding: 0px;
-    font-family: 'Century Gothic', sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     box-sizing: border-box;
     overflow-x: hidden;
 }
