--- a/css/style2.css
+++ b/css/style2.css
@@ -212,7 +212,7 @@ footer {
         width: 100%;
         margin: 0px;
         padding: 0px;
-        font-family: 'Century Gothic', sans-serif;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         box-sizing: border-box;
         overflow-x: hidden;
     }
@@ -286,7 +286,7 @@ footer {
         width: 100%;
         margin: 0px;
         padding: 0px;
-        font-family: 'Century Gothic', sans-serif;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         box-sizing: border-box;
         overflow-x: hidden;
     }
@@ -357,7 +357,7 @@ footer {
         width: 100%;
         margin: 0px;
         padding: 0px;
-        font-family: 'Century Gothic', sans-serif;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         box-sizing: border-box;
         overflow-x: hidden;
     }
