--- a/css/style2.css
+++ b/css/style2.css
@@ -77,7 +77,7 @@ body {
     line-height: 24px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
-    color: #555;
+    /*color: #555;*/
     font-weight: normal;
 }
 
@@ -87,7 +87,6 @@ body h2{
 
 body ul li {
     list-style-type: circle;
-    color: darkslategray;
 }
 
 main {
