--- a/css/style2.css
+++ b/css/style2.css
@@ -82,7 +82,6 @@ body {
 
 body h2{
     margin-top: -20px;
-    colour: darkslategray;
 }
 
 body p {
@@ -94,6 +93,10 @@ main {
     padding: 30px 20px;
     width: 90vw;
     animation: transitionIn 1.25s;
+}
+
+main h2 {
+    colour: darkslategray;
 }
 
 main ul li {
