--- a/css/style2.css
+++ b/css/style2.css
@@ -77,6 +77,7 @@ body {
     line-height: 24px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
+    color: #555;
     font-weight: normal;
 }
 
