--- a/css/style2.css
+++ b/css/style2.css
@@ -14,7 +14,7 @@ html, body {
     width: 100%;
     margin: 0px;
     padding: 0px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Century Gothic', sans-serif;
     box-sizing: border-box;
     overflow-x: hidden;
 }
@@ -92,16 +92,6 @@ main {
     animation: transitionIn 1.25s;
 }
 
-main h2 {
-    colour: darkslategray;
-}
-
-main ul li {
-    list-style-type: circle;
-    colour: #555;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
 /*Section: Content */
 section {
     margin: auto;
@@ -147,6 +137,12 @@ article {
 
 .bottle1-img:hover, .bottle2-img:hover {
     box-shadow: 0 0 20px 1px rgb(39, 35, 35);
+  }
+
+  /* Image */
+  .box-img {
+      position: relative;
+      padding:100px;
   }
 
 /* Footer */
@@ -217,7 +213,7 @@ footer {
         width: 100%;
         margin: 0px;
         padding: 0px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: 'Century Gothic', sans-serif;
         box-sizing: border-box;
         overflow-x: hidden;
     }
@@ -263,20 +259,11 @@ footer {
     body p {
         font-size: 16px;
     }
-    
-    body ul {
-        list-style-type: circle;
-        font-size: 16px;
-    }
-    
-    body li {
-        font-size: 16px;
-    }
 
     img {
         max-width: 100%;
         height: auto;
-    }
+      }
 
     footer {
         text-align: center;
@@ -295,7 +282,7 @@ footer {
         width: 100%;
         margin: 0px;
         padding: 0px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: 'Century Gothic', sans-serif;
         box-sizing: border-box;
         overflow-x: hidden;
     }
@@ -343,16 +330,7 @@ footer {
     body p {
         font-size: 14px;
     }
-    
-    body ul {
-        list-style-type: circle;
-        font-size: 14px;
-    }
-    
-    body li {
-        font-size: 16px;
-    }
-    
+
     footer {
         text-align: center;
         font-size: 14px;
@@ -370,7 +348,7 @@ footer {
         width: 100%;
         margin: 0px;
         padding: 0px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: 'Century Gothic', sans-serif;
         box-sizing: border-box;
         overflow-x: hidden;
     }
@@ -392,4 +370,3 @@ footer {
         position: absolute;
     }
 }
-
